# dasynq

./: .gitignore  Makefile  Makefile.common  NEWS  README  README.md  dasync-aen.h  dasync-kqueue.h  dasync.cc  dasync.h  dasynq-basewatchers.h  dasynq-binaryheap.h  dasynq-btree_set.h  dasynq-childproc.h  dasynq-config.h  dasynq-daryheap.h  dasynq-epoll.h  dasynq-flags.h  dasynq-interrupt.h  dasynq-itimer.h  dasynq-kqueue-macos.h  dasynq-kqueue.h  dasynq-naryheap.h  dasynq-pairingheap.h  dasynq-posixtimer.h  dasynq-pselect.h  dasynq-select.h  dasynq-signal.h  dasynq-stableheap.h  dasynq-svec.h  dasynq-timerbase.h  dasynq-timerfd.h  dasynq-util.h  dasynq.cc  dasynq.h  epoll.h  meson.build  testme.cc
.builds/: README  gmake.yml  meson.yml
cmake/: Dasynq.cmake.m4  DasynqConfig.cmake  DasynqConfigVersion.cmake.m4  Makefile
doc/: DESIGN.md  TODO  USAGE.md
doc/html/: bidi_fd_watcher.html  child_proc_watcher.html  dasynq-namespace.html  event_loop.html  fd_watcher.html  index.html  signal_watcher.html  style.css  timer.html
examples/chatserver/: README.md  chatserver-mt.cc  chatserver.cc
extra/heaptest/: README.md  dasynq-binaryheap.h  dasynq-btreequeue.h  dasynq-daryheap.h  dasynq-naryheap.h  dasynq-pairingheap.h  dasynq-stableheap.h  heaptest.cc
extra/iobench/: .gitignore  Makefile  README.md  bench.c  bench.cc
extra/macos-kqueue-bug/: a.out  macos-kqueue-bug.c
include/: dasynq.h
include/dasynq/: basewatchers.h  btree_set.h  childproc.h  config.h  daryheap.h  epoll.h  flags.h  interrupt.h  itimer.h  kqueue-macos.h  kqueue.h  mutex.h  posixtimer.h  pselect.h  select.h  signal.h  stableheap.h  svec.h  timerbase.h  timerfd.h  util.h
makefiles/: Makefile.freebsd  Makefile.linux  Makefile.macos  Makefile.netbsd  Makefile.openbsd
tests/: Makefile  dasynq-tests.cc  sample.cc  tcat.cc  testbackend.h
